<resources>
    <string name="app_name">Hangman</string>
    <string name="single_player">Single Player</string>
    <string name="new_word">New Word</string>
    <string name="you_won">You Won</string>
    <string name="miss">Miss</string>
    <string name="hit">Hit</string>
    <string name="your_score_was">Your score was</string>
    <string name="ok" translatable="false">OK</string>
    <string name="you_lost">You lost</string>
    <string name="the_word_was">The word was</string>
    <string name="play_again">Play Again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="this_word_has">This word has</string>
    <string name="letters">letters</string>
    <string name="action_settings">Settings</string>
    <string name="exit" translatable="false">Exit</string>
    <string name="sound_effects">Sound effects</string>
    <string name="Enables_sound_efects">Enables or Disables Sound Effects</string>
    <string name="vibration">Vibration</string>
    <string name="enable_vib">Enables or Disables Vibration</string>
    <string name="content_preference">Content Preference</string>
    <string name="press_ok_to_continue">Press OK to continue</string>
    <string name="enter_word">Enter Word</string>
    <string name="multi_player">Multi Player</string>
    <string name="guess_word">Guess Word</string>
    <string name="game_options">Game Options</string>
    <string name="difficulties">Difficulty</string>
    <string name="choose_dif">Choose Difficulty</string>
    <string name="highscoretable">High Score Table</string>
    <string name="random">Random</string>
    <string name="car_brands">Car Brands</string>
    <string name="europe_contries">European Countries</string>
    <string name="europe_capitals">European Capital Cities</string>
    <string name="pick_a_topic">Pick a Topic</string>
    <string name="go_btn">go button</string>
    <string name="keep_going">Keep going</string>
    <string name="well_done">Well done</string>
    <string name="getting_really_high">Getting really high</string>
    <string name="yes_master_hangman">Yes Master Hangman</string>
    <string name="congratulation_to_highscore">"Congratulation, you scored really high "</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="topic">"Topic: "</string>
    <string name="loosing_word">"Loosing word "</string>
    <string name="enter_word_first">Enter some word first</string>
    <string name="only_letters_allowed">Only letters and a space allowed</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="continue_text">continue...</string>
    <string name="just_starting">We just starting</string>
    <string name="about">about</string>
    <string name="add_word">add word</string>
    <string name="thats_short_word">That\'s a short word</string>
    <string name="hmm_must_be_medium_lenght">Hmm, must be medium category</string>
    <string name="this_lenght_is_just_right">This lenght is just about right</string>
    <string name="UI_Prefferences">UI Preferences</string>
    <string name="empty_text" translatable="false"></string>
    <string name="hangman">hangman</string>
    <string name="zero" translatable="false">0</string>
    <string name="congratulation">Congratulation</string>
    <string name="you_are">You Are </string>
    <string name="in_high_score_table"> In High Score Table</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="_10th">10th</string>
    <string name="_9th">9th</string>
    <string name="_8th">8th</string>
    <string name="_7th">7th</string>
    <string name="_6th">6th</string>
    <string name="_5th">5th</string>
    <string name="_4th">4th</string>
    <string name="_3th">3rd</string>
    <string name="_2nd">2nd</string>
    <string name="_1st">1st</string>
    <string name="xxx">XXX</string>
    <string name="you_guessed_all_words_from_your_topic">You guessed all words from your topic</string>
    <string name="your_score">Your Score</string>


</resources>
